many updates to logging, including the new file based LogViewer and removal of the Console classes