@@ -26,6 +26,7 @@ import javax.swing.UIManager;
 
 import org.hyperic.sigar.win32.FileVersion;
 import org.hyperic.sigar.win32.Win32;
+import org.slf4j.Logger;
 import org.xnap.commons.i18n.I18n;
 
 import de.shellfire.vpn.LogStreamReader;
@@ -37,13 +38,13 @@ import de.shellfire.vpn.proxy.ProxyConfig;
 import de.shellfire.vpn.webservice.ShellfireService;
 
 public class Updater {
-
+  private static Logger log = Util.getLogger(Updater.class.getCanonicalName());
   private static final String MAIN_EXE = "ShellfireVPN2.dat";
   private static final String UPDATER_EXE = "ShellfireVPN2.exe";
   private static I18n i18n = VpnI18N.getI18n();
 
   private static ShellfireService service = ShellfireService.getInstance();
-private static int contentLength;
+  private static int contentLength;
 
   static {
     setLookAndFeel();
@@ -55,7 +56,7 @@ private static int contentLength;
     }
     return service;
   }
-  
+
   /**
    * @param args
    */
@@ -70,24 +71,24 @@ private static int contentLength;
         cmd = args[0];
 
         if (cmd.equals("uninstallservice")) {
-          //ServiceTools.uninstall();
+          // ServiceTools.uninstall();
           return;
         } else if (cmd.equals("installservice")) {
-        	
-        	String path = "";
-        	if (args.length > 1) {
-        		for (int i = 1; i < args.length; i++) {
-        			path += args[i];
-        			
-        			if (i+1 < args.length) {
-        				path += " ";
-        			}
-        		}
-        		
-        	}
-        	
-        	System.out.println("Retrieved installation path from args parameter: " + path);
-          //ServiceTools.install(path); 
+
+          String path = "";
+          if (args.length > 1) {
+            for (int i = 1; i < args.length; i++) {
+              path += args[i];
+
+              if (i + 1 < args.length) {
+                path += " ";
+              }
+            }
+
+          }
+
+          log.debug("Retrieved installation path from args parameter: " + path);
+          // ServiceTools.install(path);
           return;
         } else if (cmd.equals("doupdate") && updater.newVersionAvailable()) {
           // assumes we have been restarted with elevated privileges
@@ -120,34 +121,31 @@ private static int contentLength;
     }
   }
 
-private static ProgressDialog updateProgressDialog;
-  
-  
+  private static ProgressDialog updateProgressDialog;
 
   private void executeJava(String exec) throws IOException {
-	  Process p = null;
-	  if (Util.isWindows()) {
-	      p = Runtime.getRuntime().exec(exec);
-	  } else {
-			List<String> cmds = new LinkedList<String>();
-			cmds.add("java");
-			cmds.add("-jar");
-			cmds.add(exec);
-			
-			System.out.println("cmds: " + Util.listToString(cmds));
-			p = new ProcessBuilder(cmds).start();
-	  }
-	  
-	  LogStreamReader isr = new LogStreamReader(p.getInputStream(), false);
-      Thread thread = new Thread(isr, "InputStreamReader");
-      thread.start();
+    Process p = null;
+    if (Util.isWindows()) {
+      p = Runtime.getRuntime().exec(exec);
+    } else {
+      List<String> cmds = new LinkedList<String>();
+      cmds.add("java");
+      cmds.add("-jar");
+      cmds.add(exec);
 
-      LogStreamReader esr = new LogStreamReader(p.getErrorStream(), true);
-      Thread thread2 = new Thread(esr, "ErrorStreamReader");
-      thread2.start();		  	  
+      log.debug("cmds: " + Util.listToString(cmds));
+      p = new ProcessBuilder(cmds).start();
+    }
+
+    LogStreamReader isr = new LogStreamReader(p.getInputStream(), false);
+    Thread thread = new Thread(isr, "InputStreamReader");
+    thread.start();
+
+    LogStreamReader esr = new LogStreamReader(p.getErrorStream(), true);
+    Thread thread2 = new Thread(esr, "ErrorStreamReader");
+    thread2.start();
   }
-  
-  
+
   private void silentRelaunchElevated() {
 
     String exec = "";
@@ -157,7 +155,7 @@ private static ProgressDialog updateProgressDialog;
 
     exec += Updater.UPDATER_EXE + " doupdate";
     try {
-    	executeJava(exec);
+      executeJava(exec);
 
     } catch (IOException e) {
 
@@ -169,13 +167,13 @@ private static ProgressDialog updateProgressDialog;
 
   private void launchApp(String param) {
     String exec = Updater.MAIN_EXE;
-    
+
     if (param != null && param.length() > 0) {
-    	exec += " " + param;
+      exec += " " + param;
     }
     try {
-    	System.out.println("exec: " + exec);
-	    executeJava(exec);
+      log.debug("exec: " + exec);
+      executeJava(exec);
     } catch (IOException e) {
 
       this.displayError(i18n.tr("Hauptanwendung konnte nicht gestartet werden. Launcher wird beendet.") + ("\r\n") + e.getMessage());
@@ -192,66 +190,61 @@ private static ProgressDialog updateProgressDialog;
   private void displayInfo(String msg) {
     JOptionPane.showMessageDialog(null, msg, "Hinweis", JOptionPane.INFORMATION_MESSAGE);
   }
+
   class MyWorker extends SwingWorker<String, Object> {
-	  
-	  private String filename;
-	private String installPath;
-	private String user;
 
-	public MyWorker(String filename, String path, String user) {
-		  this.filename = filename;
-		  this.installPath = path;
-		  this.user = user;
-	}
-	  
-      protected String doInBackground() {
-      	
-        try {
-          Updater.downloadAndRunExeFileFromUrl(filename, installPath, user);
+    private String filename;
+    private String installPath;
+    private String user;
 
-          return "";
-        } catch (IOException e1) {
-        	e1.printStackTrace();
-          displayError(i18n.tr("I/O Fehler während des Downloades der neuen Version. Abbruch."));
-          System.exit(0);
-
-        }
-        return "";
-      }
-
-      protected void done() {
-      	updateProgressDialog.dispose();
-      }
+    public MyWorker(String filename, String path, String user) {
+      this.filename = filename;
+      this.installPath = path;
+      this.user = user;
     }
 
-  
+    protected String doInBackground() {
+
+      try {
+        Updater.downloadAndRunExeFileFromUrl(filename, installPath, user);
+
+        return "";
+      } catch (IOException e1) {
+        e1.printStackTrace();
+        displayError(i18n.tr("I/O Fehler während des Downloades der neuen Version. Abbruch."));
+        System.exit(0);
+
+      }
+      return "";
+    }
+
+    protected void done() {
+      updateProgressDialog.dispose();
+    }
+  }
+
   public void performUpdate(final String path, String user) {
     try {
       final String fileName = getService().getLatestInstaller();
 
       updateProgressDialog = new ProgressDialog(null, false, i18n.tr("Downloade neue Version..."));
-      
+
       updateProgressDialog.setOption(2, i18n.tr("abbrechen"));
       final MyWorker w1 = new MyWorker(fileName, path, user);
       updateProgressDialog.setOptionCallback(new Runnable() {
-          @Override
-          public void run() {
-            w1.cancel(true);
-            displayError(i18n.tr("Update abgebrochen. Anwendung wird beendet."));
-            System.exit(0);
-          }
-        });
-      
-      
+        @Override
+        public void run() {
+          w1.cancel(true);
+          displayError(i18n.tr("Update abgebrochen. Anwendung wird beendet."));
+          System.exit(0);
+        }
+      });
+
       w1.execute();
-      
-    
 
-
-      
       updateProgressDialog.setVisible(true);
       try {
-    	  w1.get();
+        w1.get();
       } catch (CancellationException e) {
         // TODO Auto-generated catch block
         e.printStackTrace();
@@ -264,9 +257,9 @@ private static ProgressDialog updateProgressDialog;
       // TODO Auto-generated catch block
       e.printStackTrace();
     } catch (ExecutionException e) {
-        // TODO Auto-generated catch block
-        e.printStackTrace();
-    }     
+      // TODO Auto-generated catch block
+      e.printStackTrace();
+    }
 
   }
 
@@ -299,11 +292,10 @@ private static ProgressDialog updateProgressDialog;
   }
 
   private boolean askIfUpdateShouldBePerformed() {
-    int result = JOptionPane
-        .showConfirmDialog(
-            null,
-            i18n.tr("Update verfügbar. Ohne Durchführung des Updates ist der weitere Betrieb von Shellfire VPN leider nicht möglich.\n\nJetzt Updaten?"),
-            i18n.tr("Update verfügbar"), JOptionPane.YES_NO_OPTION);
+    int result = JOptionPane.showConfirmDialog(null,
+        i18n.tr(
+            "Update verfügbar. Ohne Durchführung des Updates ist der weitere Betrieb von Shellfire VPN leider nicht möglich.\n\nJetzt Updaten?"),
+        i18n.tr("Update verfügbar"), JOptionPane.YES_NO_OPTION);
 
     return (result == JOptionPane.YES_OPTION);
   }
@@ -325,7 +317,7 @@ private static ProgressDialog updateProgressDialog;
 
     try {
       version = getService().getLatestVersion();
-    	
+
     } catch (IOException e) {
       this.displayError(i18n.tr("I/O Fehler beim Abruf der Online Versionsinformation. Anwendung wird beendet."));
       System.exit(0);
@@ -349,17 +341,17 @@ private static ProgressDialog updateProgressDialog;
     if (Util.isWindows()) {
       return getInstalledVersionWindows();
     } else {
-		try {
-			String file = com.apple.eio.FileManager.getPathToApplicationBundle() + "/Contents/Java/VERSION";
-			if (!(new File(file).exists())) {
-				file = "VERSION";
-			}
-			
-			return Long.valueOf(Util.fileToString((file)).trim());
-		} catch (Exception e) {
-			Util.handleException(e);
-		} 
-    	return 0;   	
+      try {
+        String file = com.apple.eio.FileManager.getPathToApplicationBundle() + "/Contents/Java/VERSION";
+        if (!(new File(file).exists())) {
+          file = "VERSION";
+        }
+
+        return Long.valueOf(Util.fileToString((file)).trim());
+      } catch (Exception e) {
+        Util.handleException(e);
+      }
+      return 0;
     }
 
   }
@@ -372,7 +364,7 @@ private static ProgressDialog updateProgressDialog;
   }
 
   private static void downloadAndRunExeFileFromUrl(String url, String installPath, String user) throws IOException {
-    System.out.println(url);
+    log.debug(url);
 
     URL u = new URL(url);
     String host = u.getHost();
@@ -395,20 +387,20 @@ private static ProgressDialog updateProgressDialog;
 
     String httpget = "GET " + file + "?tracked=true HTTP/1.0";
     out.println(httpget);
-    System.out.println(httpget);
+    log.debug(httpget);
     String httphost = "HOST: " + host;
     out.println(httphost);
-    System.out.println(httphost);
+    log.debug(httphost);
     out.println();
 
     FileOutputStream fos = null;
     String ext = "";
     if (Util.isWindows()) {
-    	ext = "exe";
+      ext = "exe";
     } else {
-    	ext = "dmg";
+      ext = "dmg";
     }
-    
+
     File f = File.createTempFile("ShellfireVPN_installer", "." + ext);
 
     fos = new FileOutputStream(f);
@@ -418,20 +410,19 @@ private static ProgressDialog updateProgressDialog;
     int len;
     boolean afterHeader = false;
     String header = "";
-    
+
     int contentBytesRead = 0;
-    
+
     while ((len = is.read(buf)) > 0) {
       if (afterHeader) {
         fos.write(buf, 0, len);
-        
+
         if (contentLength > 0) {
-        	contentBytesRead += len;
-            float percentage = (float)contentBytesRead / (float)contentLength * 100F;
-            updateProgressDialog.updateProgress(percentage);
+          contentBytesRead += len;
+          float percentage = (float) contentBytesRead / (float) contentLength * 100F;
+          updateProgressDialog.updateProgress(percentage);
         }
-        
-        
+
       } else {
         String str = new String(buf);
         // end of heaader is included, remove it and write what comes after into the file
@@ -451,22 +442,22 @@ private static ProgressDialog updateProgressDialog;
           }
           fos.write(buf, offset, buf.length - offset);
           afterHeader = true;
-          header += str.substring(0, offset-1);
+          header += str.substring(0, offset - 1);
 
-          System.out.println("------ HEADER ------");
-          System.out.println(header);
-          System.out.println("------ HEADER ------");
-          
+          log.debug("------ HEADER ------");
+          log.debug(header);
+          log.debug("------ HEADER ------");
+
           String[] lines = header.split("\\r\\n");
           for (String line : lines) {
-        	  if (line.startsWith("Content-Length:"))
-        		  contentLength = Integer.parseInt(line.substring(16));
+            if (line.startsWith("Content-Length:"))
+              contentLength = Integer.parseInt(line.substring(16));
           }
-          
-          System.out.println("Length: " + contentLength);
-          
+
+          log.debug("Length: " + contentLength);
+
         } else {
-        	header += str;
+          header += str;
         }
       }
 
@@ -479,30 +470,29 @@ private static ProgressDialog updateProgressDialog;
     // launch install process
     Process p;
     if (Util.isWindows()) {
-    	String start = "";
+      String start = "";
 
-        start += "\"" + f.getAbsolutePath() + "\"";
-        System.out.println(start);
-        p = Runtime.getRuntime().exec(start);
+      start += "\"" + f.getAbsolutePath() + "\"";
+      log.debug(start);
+      p = Runtime.getRuntime().exec(start);
     } else {
-    	updateProgressDialog.setIndeterminate(true);
-    	updateProgressDialog.setText(i18n.tr("Shellfire VPN Service deinstallieren..."));
-    	
-    	//ServiceTools.uninstall(installPath + "/Contents/Java/");
-    	
-    	updateProgressDialog.setText(i18n.tr("Neue Version installieren "));
-    	
-    	List<String> unzip = new ArrayList<String>();
-    	unzip.add("/usr/bin/unzip");
-    	unzip.add("-o"); // overwrite without prompt
-    	unzip.add("-q"); // be quiet
-    	unzip.add(f.getAbsolutePath());
-    	unzip.add("-d");
-    	unzip.add(installPath);
-    	System.out.println(Util.listToString(unzip));
-    	p = new ProcessBuilder(unzip).start();
+      updateProgressDialog.setIndeterminate(true);
+      updateProgressDialog.setText(i18n.tr("Shellfire VPN Service deinstallieren..."));
+
+      // ServiceTools.uninstall(installPath + "/Contents/Java/");
+
+      updateProgressDialog.setText(i18n.tr("Neue Version installieren "));
+
+      List<String> unzip = new ArrayList<String>();
+      unzip.add("/usr/bin/unzip");
+      unzip.add("-o"); // overwrite without prompt
+      unzip.add("-q"); // be quiet
+      unzip.add(f.getAbsolutePath());
+      unzip.add("-d");
+      unzip.add(installPath);
+      log.debug(Util.listToString(unzip));
+      p = new ProcessBuilder(unzip).start();
     }
-    
 
     LogStreamReader isr = new LogStreamReader(p.getInputStream(), false);
     Thread thread = new Thread(isr, "InputStreamReader");
@@ -511,41 +501,39 @@ private static ProgressDialog updateProgressDialog;
     LogStreamReader esr = new LogStreamReader(p.getErrorStream(), true);
     Thread thread2 = new Thread(esr, "ErrorStreamReader");
     thread2.start();
-    
+
     if (!Util.isWindows()) {
-    	try {
-			p.waitFor();
-			
-			List<String> chown = new ArrayList<String>();
-			chown.add("/usr/sbin/chown");
-			chown.add("-R");
-			chown.add(user + ":staff");
-			chown.add(installPath);
-			System.out.println(Util.listToString(chown));
-			p = new ProcessBuilder(chown).start();
-			Util.digestProcess(p);
-			p.waitFor();
-			
-		} catch (InterruptedException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-    	ServiceTools.resetService();
-    	updateProgressDialog.setText(i18n.tr("Shellfire VPN Service installieren..."));
-    	//ServiceTools.install(installPath + "/Contents/Java/");
-    	
-    	List<String> restart = new ArrayList<String>();
-    	restart.add("/usr/bin/open");
-    	restart.add(installPath);
-    	System.out.println(Util.listToString(restart));
-    	new ProcessBuilder(restart).start();
+      try {
+        p.waitFor();
+
+        List<String> chown = new ArrayList<String>();
+        chown.add("/usr/sbin/chown");
+        chown.add("-R");
+        chown.add(user + ":staff");
+        chown.add(installPath);
+        log.debug(Util.listToString(chown));
+        p = new ProcessBuilder(chown).start();
+        Util.digestProcess(p);
+        p.waitFor();
+
+      } catch (InterruptedException e) {
+        // TODO Auto-generated catch block
+        e.printStackTrace();
+      }
+      ServiceTools.resetService();
+      updateProgressDialog.setText(i18n.tr("Shellfire VPN Service installieren..."));
+      // ServiceTools.install(installPath + "/Contents/Java/");
+
+      List<String> restart = new ArrayList<String>();
+      restart.add("/usr/bin/open");
+      restart.add(installPath);
+      log.debug(Util.listToString(restart));
+      new ProcessBuilder(restart).start();
     }
 
     // shutdown to ensure proper installation is possible
     System.exit(0);
 
   }
-
-
 
 }
